--- a/PinkDogMM_Gd.csproj
+++ b/PinkDogMM_Gd.csproj
@@ -8,4 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Config.Net" Version="5.3.0-pre.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Scenes\Elements\PropertiesPanel.cs.no" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Render\Ables\" />
+  </ItemGroup>
 </Project>
