--- a/PinkDogMM_Gd.csproj
+++ b/PinkDogMM_Gd.csproj
@@ -1,17 +1,25 @@
-<Project Sdk="Godot.NET.Sdk/4.5.0-beta">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <EnableDynamicLoading>true</EnableDynamicLoading>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Config.Net" Version="5.3.0-pre.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Scenes\Elements\PropertiesPanel.cs.no" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Render\Ables\" />
-  </ItemGroup>
+<Project Sdk="Godot.NET.Sdk/4.6.0-dev">
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+     
+        <Nullable>enable</Nullable>
+        <StartProgram>/home/peachy/Projects/godot/bin/godot.linuxbsd.editor.dev.x86_64.mono</StartProgram>
+        <StartWorkingDirectory>./</StartWorkingDirectory>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <DebugType>portable</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DebugType>full</DebugType>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Config.Net" Version="5.3.0-pre.1"/>
+        <PackageReference Update="Godot.SourceGenerators" Version="4.5.0" />
+    </ItemGroup>
+    <ItemGroup>
+
+    </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Render\Ables\"/>
+    </ItemGroup>
 </Project>
