--- a/PinkDogMM_Gd.csproj
+++ b/PinkDogMM_Gd.csproj
@@ -15,6 +15,8 @@
     <ItemGroup>
         <PackageReference Include="Config.Net" Version="5.3.0-pre.1"/>
         <PackageReference Update="Godot.SourceGenerators" Version="4.5.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+        <PackageReference Include="Pastel" Version="7.0.0" />
     </ItemGroup>
     <ItemGroup>
 
