Organized so its nice and neat

--- a/PinkDogMM_Gd.csproj
+++ b/PinkDogMM_Gd.csproj
@@ -19,6 +19,6 @@
         <PackageReference Include="Pastel" Version="7.0.0" />
     </ItemGroup>
     <ItemGroup>
-
+      <Folder Include="Scenes\Elements\" />
     </ItemGroup>
 </Project>
