--- a/PinkDogMM_Gd.csproj
+++ b/PinkDogMM_Gd.csproj
@@ -1,17 +1,21 @@
 <Project Sdk="Godot.NET.Sdk/4.6.0-dev">
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-     
+        <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net9.0</TargetFramework>
+        <EnableDynamicLoading>true</EnableDynamicLoading>
+        <RootNamespace>PinkDogMM_Gd</RootNamespace>
+        <Deterministic>true</Deterministic>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+    <!--<PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <StartProgram>/home/peachy/Projects/godot/bin/godot.linuxbsd.editor.dev.x86_64.mono</StartProgram>
         <StartWorkingDirectory>./</StartWorkingDirectory>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <DebugType>portable</DebugType>
-        <DebugSymbols>true</DebugSymbols>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DebugType>full</DebugType>
-    </PropertyGroup>
+        <DebugType>full</DebugType>
+        <Deterministic>true</Deterministic>
+    </PropertyGroup>-->
     <ItemGroup>
         <PackageReference Include="Config.Net" Version="5.3.0-pre.1"/>
         <PackageReference Update="Godot.SourceGenerators" Version="4.5.0" />
